# email-notification-microservice

./: .dockerignore  .env.dist  Dockerfile  README.md  app.json  docker-compose.prod.yaml  docker-compose.yaml  heroku.yaml  pre-push.sh  pyproject.toml  requirements.txt  start_server.sh
email_service/: admin.py  models.py  serializer.py  tasks.py  urls.py  utils.py  views.py
email_service/migrations/: 0001_initial.py
src/: settings.py  urls.py
src/celery/: celery.py  models.py
src/celery/management/commands/: runcelery.py
