[tool.poetry]
name = "email_notification_microservice"
version = "0.1.0"
description = "A simple email and push notification mircroservie made with django."
authors = ["Naman Tamrakar <namantam1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.8"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
